--- a/piaware.env
+++ b/piaware.env
@@ -1,5 +1,6 @@
 TZ="New York"               # Timezone for the location
 RECEIVER_TYPE=rtlsdr        # The type of SDR to use
 #DUMP1090_DEVICE=1           # If you have multiple SDR attach, use this to specify the index of the RTL SDR to use
+FEEDER_ID=1d2d38ff-9eb7-43ff-8b14-0b4b7ce19738
 LAT=${TRIPOD_LATITUDE}
 LONG=${TRIPOD_LONGITUDE}
